syntax = "proto3";
package ProtoMsg;

import "cs_protoid.proto";
import "ss_protoid.proto";

message Ret {
    int32  err_code = 1;
    string err_msg = 2;
};
