syntax = "proto3";
package ProtoMsg;

enum emSSMsgId {
    SVR_MSG_INVALID = 0;
    SVR_MSG_HEART_BEAT = 1;

    SVR_MSG_BEGIN               = 200000;
    //集群服务
    SVR_MSG_REGISTER_CLUSTER    = 200001; //注册集群服务器
    SVR_MSG_BROAD_CLUSTER       = 200002; //集群服务器更新广播

    //game
    SVR_MSG_REGISTER_GAME       = 201001; //注册game服务器

    //world
    SVR_MSG_REGISTER_WORLD      = 202001;  //注册大厅服务器

    //登陆
    SVR_MSG_REGISTER_LOGIN      = 203001;  //注册登陆服务器

    //db相关
    SVR_MSG_REGISTER_DB         = 204001;  //注册DB服务器
    SVR_MSG_DB_SERVICE          = 204002;

    SVR_MSG_END                 = 299999;
};
